# sp1

./: Cargo.toml
core/src/stark/: air.rs
core/src/utils/: prove.rs
custom/: Cargo.toml
custom-prover/: Cargo.toml  Makefile
custom-prover/scripts/: build_plonk_bn254.rs  e2e.rs  fibonacci_groth16.rs  fibonacci_sweep.rs  tendermint_sweep.rs
custom-prover/src/: build.rs  lib.rs  types.rs  utils.rs  verify.rs
custom-recursion/circuit/: Cargo.toml
custom-recursion/circuit/src/: challenger.rs  constraints.rs  domain.rs  fri.rs  lib.rs  mmcs.rs  poseidon2.rs  stark.rs  types.rs  utils.rs  witness.rs
custom-recursion/compiler/: Cargo.toml
custom-recursion/compiler/examples/: fibonacci.rs
custom-recursion/compiler/src/: lib.rs
custom-recursion/compiler/src/asm/: builder.rs  code.rs  compiler.rs  instruction.rs
custom-recursion/compiler/src/ir/: bits.rs  fold.rs  poseidon.rs  utils.rs
custom-recursion/compiler/tests/: arithmetic.rs  array.rs  conditionals.rs  for_loops.rs  io.rs  lt.rs  poseidon2.rs  public_values.rs
custom-recursion/core/: Cargo.toml
custom-recursion/core/src/runtime/: mod.rs
custom-recursion/derive/: Cargo.toml
custom-recursion/gnark-cli/: Cargo.toml
custom-recursion/gnark-cli/src/: main.rs
custom-recursion/gnark-ffi/: Cargo.toml
custom-recursion/gnark-ffi/go/: go.mod  main.go
custom-recursion/gnark-ffi/src/: plonk_bn254.rs  witness.rs
custom-recursion/program/: Cargo.toml
custom-recursion/program/src/: challenger.rs  commit.rs  constraints.rs  hints.rs  stark.rs  types.rs  utils.rs
custom-recursion/program/src/fri/: domain.rs  (+4 more)
custom/src/: lib.rs
custom/src/fibonacci/: mod.rs
custom/src/runtime/: mod.rs  program.rs  record.rs
custom/src/stark/: air.rs
custom/src/utils/: mod.rs  prove.rs
examples/: Cargo.toml
examples/empty/program/: Cargo.toml
examples/empty/script/: Cargo.toml
examples/empty/script/src/: main.rs
prover/src/: lib.rs
(+17 files in other folders)
