[package]
edition = "2021"
name = "sp1-custom"
version = "0.1.0"

[dependencies]
bincode = "1.3.3"
p3-field = { workspace = true }
p3-util = { workspace = true }
p3-baby-bear = { workspace = true }
p3-blake3 = { workspace = true, features = ["parallel"] }
p3-air = { workspace = true }
p3-keccak = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-uni-stark = { workspace = true }
sp1-derive = { path = "../derive" }
sp1-primitives = { path = "../primitives" }
tracing = "0.1.40"
sp1-core = { path = "../core" }
hashbrown = "0.14.5"
itertools = "0.13.0"
p3-bn254-fr = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-commit = { workspace = true }
p3-dft = { workspace = true }
p3-challenger = { workspace = true }
p3-fri = { workspace = true }
zkhash = { git = "https://github.com/HorizenLabs/poseidon2" }
ff = { version = "0.13", features = ["derive", "derive_bits"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "3.8.1"
backtrace = { version = "0.3.71", features = ["serde"] }
arrayref = "0.3.7"
size = "0.4.1"
static_assertions = "1.1.0"
tempfile = "3.10.1"
thiserror = "1.0.60"
web-time = "1.1.0"

[dev-dependencies]
rand = "0.8.5"
