[package]
version = "0.1.0"
name = "empty-script"
edition = "2021"
default-run = "empty-script"

[dependencies]
itertools = "0.12.1"
sp1-sdk = { path = "../../../sdk", features = ["plonk"] }
sha2 = "0.10.8"

[build-dependencies]
sp1-helper = { path = "../../../helper" }

[[bin]]
name = "plonk_bn254"
path = "bin/plonk_bn254.rs"

[[bin]]
name = "compressed"
path = "bin/compressed.rs"

[[bin]]
name = "execute"
path = "bin/execute.rs"

[[bin]]
name = "empty-script"
path = "src/main.rs"
